--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ecosim",
+  "name": "EcoSim",
   "version": "1.0.0",
   "description": "\"A test Eco Sim program\"",
   "main": "index.js",
